1999-01-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_t42.c (write_t42): moved parts shared with write_cid2 to
	util.c.
	* util.c: new file for routines shared by write_t42 and
	write_cid2; created new function write_font_info.
	* write_cid2.c, cid.c: first cut at CID keyed font support.
	* main.c (main): new command line option --cid.
	* t42.h: new defines for font type (TYPE_*).
	* open_font.c: new argument type; callers changed.

1999-01-04  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* t42.h: fixed bug in conditional include <libgen.h>

	* open_font.c (open_font): terminate font_name when wheeding out
	illegal characters.

	* main.c (main): changed --fontmap to --filename (and WHAT_FMAP to
	WHAT_FILE).

1999-01-03  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* open_font.c (open_font): parse Version string

	* write_t42.c (write_t42): generate Encoding array.

	* write_afm.c (write_afm): derive EncodingScheme from encoding
	argument.

	* main.c (main): handle --encoding option.

	* t42.h (struct encoding) new struct.
	* t42.h (struct rev_enc) moved from write_afm.h, renamed from
	struct code.
	* encodings.c: new file; replaces enc_standard.c
	* write_afm.c (make_revenc): renamed from make_code, changed to
	use struct encoding.
	(make_glyph): changed to use struct encoding.
	(write_afm): new argument encoding, changed callers.
	* write_t42.c: new argument encoding, changed callers.
	
1999-01-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c (main): close output files.

	* get_name.c (get_name): return string when found (pid == Macintosh).

	* t42.h, main.c (main): new options --name and --fontmap.

1998-12-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* t42.h, configure.in: check for <libgen.h> and include if found
	(and we have basename).

	* configure.in: new option --with-freetype, to specify either
	installation prefix or distribution directory (if FreeType library
	can't be found automatically).
